--- a/Homework/Day_017_HW.ipynb
+++ b/Homework/Day_017_HW.ipynb
@@ -200,39 +200,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name\n",
-      "Sex\n",
-      "Ticket\n",
-      "Cabin\n",
-      "Embarked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -363,9 +330,8 @@
     "for c in df.columns:\n",
     "    df[c] = df[c].fillna(-1)\n",
     "    if df[c].dtype == 'object':\n",
-    "        print(c)\n",
     "        df[c] = LEncoder.fit_transform(list(df[c].values))\n",
-    "    df[c] = MMEncoder.fit_transform(df[c].values.reshape(-1, 1))\n",
+    "    df[c] = MMEncoder.fit_transform(df[c].astype(float).values.reshape(-1, 1))\n",
     "df.head()"
    ]
   },
@@ -373,16 +339,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\felix\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 程式區塊 D\n",
     "train_num = train_Y.shape[0]\n",
@@ -390,7 +347,7 @@
     "test_X = df[train_num:]\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LogisticRegression(solver='liblinear')\n",
     "estimator.fit(train_X, train_Y)\n",
     "pred = estimator.predict(test_X)"
    ]
