--- a/Homework/Day_023_HW.ipynb
+++ b/Homework/Day_023_HW.ipynb
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 Numeric Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n",
+      "5 Object Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n",
       "\n"
      ]
     },
@@ -284,7 +284,7 @@
     "for dtype, feature in zip(df.dtypes, df.columns):\n",
     "    if dtype == 'object':\n",
     "        object_features.append(feature)\n",
-    "print(f'{len(object_features)} Numeric Features : {object_features}\\n')\n",
+    "print(f'{len(object_features)} Object Features : {object_features}\\n')\n",
     "\n",
     "# 只留類別型欄位\n",
     "df = df[object_features]\n",
@@ -337,7 +337,7 @@
      "text": [
       "shape : (891, 5)\n",
       "score : 0.780004837244799\n",
-      "time : 0.042899131774902344 sec\n"
+      "time : 0.03929734230041504 sec\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
      "text": [
       "shape : (891, 5)\n",
       "score : 1.0\n",
-      "time : 0.034906625747680664 sec\n"
+      "time : 0.03789854049682617 sec\n"
      ]
     }
    ],
