--- a/Homework/Day_026_HW.ipynb
+++ b/Homework/Day_026_HW.ipynb
@@ -306,7 +306,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475640173\n",
-      "Gradient Boosting Reg Score : 0.7107497600276457\n"
+      "Gradient Boosting Reg Score : 0.7116112099369888\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.027473522287347694\n",
-      "Gradient Boosting Reg Score : 0.8051847904396572\n"
+      "Gradient Boosting Reg Score : 0.8051206380145898\n"
      ]
     }
    ],
@@ -476,24 +476,46 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def haversine(lat1, lat2, dlon, dlat):\n",
+    "    \"\"\"\n",
+    "    Calculate the great circle distance between two points \n",
+    "    on the earth (specified in decimal degrees)\n",
+    "    \"\"\"\n",
+    "    # convert decimal degrees to radians \n",
+    "    lat1, lat2, dlon, dlat = map(radians, [lat1, lat2, dlon, dlat])\n",
+    "    # haversine formula \n",
+    "    # dlon = lon2 - lon1 \n",
+    "    # dlat = lat2 - lat1 \n",
+    "    # a = sin(dlat/2)**2 + cos(lat1) * cos(lat2) * sin(dlon/2)**2\n",
+    "    # c = 2 * asin(sqrt(a)) \n",
+    "    # km = 6367 * c\n",
+    "    E_r = 6378.1370 #地球赤道極半徑\n",
+    "    P_r = 6356.7523 #地球極半徑\n",
+    "    r = ((2 * E_r) + P_r) / 3 #平均半徑\n",
+    "    d = 2 * r * asin(((sin(dlat / 2) ** 2) + (cos(lat1) * cos(lat2) * sin(dlon / 2) ** 2)) ** 0.5)\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.02768550710793636\n",
-      "Gradient Boosting Reg Score : 0.8038304090661599\n"
+      "Linear Reg Score : 0.3673277083547837\n",
+      "Gradient Boosting Reg Score : 0.8038493332428759\n"
      ]
     }
    ],
    "source": [
-    "P_r = 6356.7523 #地球極半徑\n",
-    "E_r = 6378.1370 #地球赤道極半徑\n",
-    "Long_l = 2 * pi * E_r / 360 #經度長\n",
-    "Lat_l = 2 * pi * P_r / 360 #緯度長\n",
-    "# print(Long_l)\n",
-    "# print(Lat_l)\n",
-    "df['distance_real'] = ((df['longitude_diff'] * np.cos(40.75) * Long_l) **2 + (df['latitude_diff'] * Lat_l) **2) ** 0.5\n",
+    "df['distance_real'] = df.apply(lambda row: haversine(row.pickup_latitude, row.dropoff_latitude, \\\n",
+    "                                                     row.longitude_diff, row.latitude_diff), \\\n",
+    "                               axis=1)\n",
     "\n",
     "# 觀察結果 \n",
     "train_X = scaler.fit_transform(df.astype(float))\n",
@@ -512,15 +534,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.0014280747344858965\n",
-      "Gradient Boosting Reg Score : 0.7371246231464648\n"
+      "Linear Reg Score : 0.00115360961423967\n",
+      "Gradient Boosting Reg Score : 0.715704780543987\n"
      ]
     }
    ],
@@ -529,13 +551,6 @@
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
