--- a/Homework/Day_033_HW.ipynb
+++ b/Homework/Day_033_HW.ipynb
@@ -34,7 +34,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1e886bf6278>"
+       "<IPython.lib.display.YouTubeVideo at 0x29d7bc73320>"
       ]
      },
      "execution_count": 1,
@@ -53,6 +53,7 @@
    "source": [
     "### 1. 模型的泛化能力 (generalization) 是指什麼？ \n",
     "* Ans:模型是根據已知的資料建構的，並放到測試的資料看結果並調整，如果以上的結果都不錯，是否能通用在未知的資料上，也有相當不錯的結果?\n",
+    "\n",
     "### 2. 分類問題與回歸問題分別可用的目標函數有哪些？\n",
     "* 分類 \n",
     "    Ans:\n",
