--- a/Homework/Day71-使用損失函數_HW.ipynb
+++ b/Homework/Day71-使用損失函數_HW.ipynb
@@ -343,25 +343,25 @@
      "text": [
       "Train on 40000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
-      "40000/40000 [==============================] - 165s 4ms/step - loss: 0.0897 - acc: 0.1268 - val_loss: 0.0893 - val_acc: 0.1739\n",
+      "40000/40000 [==============================] - 45s 1ms/step - loss: 0.0897 - acc: 0.1267 - val_loss: 0.0893 - val_acc: 0.1738\n",
       "Epoch 2/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0887 - acc: 0.1654 - val_loss: 0.0884 - val_acc: 0.2255\n",
+      "40000/40000 [==============================] - 36s 896us/step - loss: 0.0887 - acc: 0.1655 - val_loss: 0.0884 - val_acc: 0.2254\n",
       "Epoch 3/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0871 - acc: 0.2063 - val_loss: 0.0869 - val_acc: 0.2582\n",
+      "40000/40000 [==============================] - 35s 871us/step - loss: 0.0871 - acc: 0.2062 - val_loss: 0.0869 - val_acc: 0.2586\n",
       "Epoch 4/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0851 - acc: 0.2443 - val_loss: 0.0852 - val_acc: 0.2808\n",
+      "40000/40000 [==============================] - 35s 883us/step - loss: 0.0851 - acc: 0.2443 - val_loss: 0.0852 - val_acc: 0.2812\n",
       "Epoch 5/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0835 - acc: 0.2680 - val_loss: 0.0839 - val_acc: 0.3041\n",
+      "40000/40000 [==============================] - 35s 882us/step - loss: 0.0835 - acc: 0.2686 - val_loss: 0.0839 - val_acc: 0.3040\n",
       "Epoch 6/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0824 - acc: 0.2918 - val_loss: 0.0831 - val_acc: 0.3190\n",
+      "40000/40000 [==============================] - 35s 870us/step - loss: 0.0824 - acc: 0.2918 - val_loss: 0.0831 - val_acc: 0.3191\n",
       "Epoch 7/10\n",
-      "40000/40000 [==============================] - 164s 4ms/step - loss: 0.0813 - acc: 0.3081 - val_loss: 0.0820 - val_acc: 0.3400\n",
+      "40000/40000 [==============================] - 35s 882us/step - loss: 0.0813 - acc: 0.3080 - val_loss: 0.0820 - val_acc: 0.3397\n",
       "Epoch 8/10\n",
-      "40000/40000 [==============================] - 165s 4ms/step - loss: 0.0802 - acc: 0.3243 - val_loss: 0.0813 - val_acc: 0.3533\n",
+      "40000/40000 [==============================] - 34s 862us/step - loss: 0.0802 - acc: 0.3238 - val_loss: 0.0813 - val_acc: 0.3531\n",
       "Epoch 9/10\n",
-      "40000/40000 [==============================] - 165s 4ms/step - loss: 0.0793 - acc: 0.3343 - val_loss: 0.0804 - val_acc: 0.3640\n",
+      "40000/40000 [==============================] - 36s 888us/step - loss: 0.0793 - acc: 0.3342 - val_loss: 0.0804 - val_acc: 0.3641\n",
       "Epoch 10/10\n",
-      "40000/40000 [==============================] - 161s 4ms/step - loss: 0.0784 - acc: 0.3490 - val_loss: 0.0798 - val_acc: 0.3684\n"
+      "40000/40000 [==============================] - 34s 861us/step - loss: 0.0784 - acc: 0.3488 - val_loss: 0.0798 - val_acc: 0.3681\n"
      ]
     }
    ],
@@ -384,25 +384,25 @@
      "text": [
       "Train on 40000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
-      "40000/40000 [==============================] - 168s 4ms/step - loss: 0.2670 - acc: 0.9037 - val_loss: 0.2674 - val_acc: 0.9011\n",
+      "40000/40000 [==============================] - 38s 960us/step - loss: 0.2670 - acc: 0.9038 - val_loss: 0.2674 - val_acc: 0.9011\n",
       "Epoch 2/10\n",
-      "40000/40000 [==============================] - 196s 5ms/step - loss: 0.2539 - acc: 0.9058 - val_loss: 0.2556 - val_acc: 0.9025\n",
+      "40000/40000 [==============================] - 36s 905us/step - loss: 0.2539 - acc: 0.9058 - val_loss: 0.2556 - val_acc: 0.9025\n",
       "Epoch 3/10\n",
-      "40000/40000 [==============================] - 169s 4ms/step - loss: 0.2441 - acc: 0.9076 - val_loss: 0.2495 - val_acc: 0.9034\n",
+      "40000/40000 [==============================] - 37s 923us/step - loss: 0.2441 - acc: 0.9076 - val_loss: 0.2495 - val_acc: 0.9034\n",
       "Epoch 4/10\n",
-      "40000/40000 [==============================] - 171s 4ms/step - loss: 0.2361 - acc: 0.9098 - val_loss: 0.2419 - val_acc: 0.9044\n",
+      "40000/40000 [==============================] - 36s 903us/step - loss: 0.2361 - acc: 0.9098 - val_loss: 0.2418 - val_acc: 0.9045\n",
       "Epoch 5/10\n",
-      "40000/40000 [==============================] - 179s 4ms/step - loss: 0.2290 - acc: 0.9116 - val_loss: 0.2347 - val_acc: 0.9065\n",
+      "40000/40000 [==============================] - 37s 927us/step - loss: 0.2291 - acc: 0.9115 - val_loss: 0.2349 - val_acc: 0.9065\n",
       "Epoch 6/10\n",
-      "40000/40000 [==============================] - 174s 4ms/step - loss: 0.2231 - acc: 0.9132 - val_loss: 0.2288 - val_acc: 0.9088\n",
+      "40000/40000 [==============================] - 37s 913us/step - loss: 0.2231 - acc: 0.9132 - val_loss: 0.2289 - val_acc: 0.9088\n",
       "Epoch 7/10\n",
-      "40000/40000 [==============================] - 173s 4ms/step - loss: 0.2173 - acc: 0.9155 - val_loss: 0.2229 - val_acc: 0.9105\n",
+      "40000/40000 [==============================] - 36s 912us/step - loss: 0.2173 - acc: 0.9155 - val_loss: 0.2229 - val_acc: 0.9104\n",
       "Epoch 8/10\n",
-      "40000/40000 [==============================] - 177s 4ms/step - loss: 0.2125 - acc: 0.9172 - val_loss: 0.2206 - val_acc: 0.9135\n",
+      "40000/40000 [==============================] - 37s 925us/step - loss: 0.2126 - acc: 0.9171 - val_loss: 0.2205 - val_acc: 0.9134\n",
       "Epoch 9/10\n",
-      "40000/40000 [==============================] - 176s 4ms/step - loss: 0.2083 - acc: 0.9187 - val_loss: 0.2144 - val_acc: 0.9136\n",
+      "40000/40000 [==============================] - 36s 907us/step - loss: 0.2084 - acc: 0.9187 - val_loss: 0.2145 - val_acc: 0.9136\n",
       "Epoch 10/10\n",
-      "40000/40000 [==============================] - 176s 4ms/step - loss: 0.2045 - acc: 0.9203 - val_loss: 0.2116 - val_acc: 0.9152\n"
+      "40000/40000 [==============================] - 37s 927us/step - loss: 0.2046 - acc: 0.9203 - val_loss: 0.2117 - val_acc: 0.9151\n"
      ]
     }
    ],
